# magnum-api

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: derive_serde.rs
